# nesqt

./: .gitignore  CMakeLists.txt  LICENSE  NesQt.cpp  NesQt.h  NesQt_en_US.ts  README.md  attr.cpp  attr.h  bgpaldefault.h  chr.cpp  chr.h  chreditorwidget.cpp  chreditorwidget.h  chreditundo.cpp  chreditundo.h  chreditview.cpp  chreditview.h  chrrenderer.cpp  chrrenderer.h  chrview.cpp  chrview.h  emphasis.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nametable.cpp  nametable.h  nametablerenderer.cpp  nametablerenderer.h  nametableundo.cpp  nametableundo.h  nametableview.cpp  nametableview.h  nespalette.cpp  nespalette.h  nespalette_data.h  nespaletteview.cpp  nespaletteview.h  (+8 more)
